--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -7,6 +7,8 @@
   width: 100%;
   padding-top: 10px;
   z-index: 10;
+  padding-bottom: 0;
+  @include transition ();
 }
 .js-header--fixed
 {
